--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
     </header>
     <main>
         <section class="second-section-container">
+            <div class="second-section-content">
+                <h1>65% OFF</h1>
+                <p>OUR HOLIDAY DEALS ARE BETTER</p>
+                <h3>ALL CATEGORIES</h3>
+            </div>
+            <div class="image-container">
+            <img src="images/New Year Photo.png" alt="">
+            </div>
 
         </section>
 
