party section done

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     </header>
     <main>
+
         <section class="second-section-container">
             <div class="second-section-content">
                 <h1>65% OFF</h1>
@@ -29,6 +30,19 @@
             </div>
 
         </section>
+        <!-- mid night section start  -->
+         <section class="midnight-party-container">
+         <div class="leftside-content">
+            <h1> Welcome to<br> midnight party</h1>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+            <span id="mid-button">Join Now</span>
+
+         </div>
+         <div class="rightside-content">
+            <img src="images/Group 70.png" alt="">
+         </div>
+         </section>
+
 
     </main>
     <footer>
