--- a/index.html
+++ b/index.html
@@ -58,9 +58,37 @@
             <div class="girl-container">
             <img src="images/Group 44.png" alt="">
             </div>
-            
+
                 </div>
 
+         </section>
+         <section class="portfolio-section-container">
+            <div class="portfolio-text-content">
+             <h4 style="color: red;">THE BEST GIFTS </h4>
+             <h1>Our Awesome Portfolio </h1>
+             <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada.<br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            </div>
+            <div class="portfolio-item">
+            <div class="item">
+            <img src="images/Rectangle 3.png" alt="">
+            </div>
+             <div class="item">
+            <img src="images/Rectangle 4.png" alt="">
+            </div>
+             <div class="item">
+            <img src="images/Rectangle 6.png" alt="">
+            </div>
+             <div class="item">
+            <img src="images/Rectangle 5.png" alt="">
+            </div>
+            <div class="item">
+                <img src="images/Rectangle 8.png" alt="">
+                </div>
+                <div class="item">
+                    <img src="images/Rectangle 7.png" alt="">
+                    </div>
+            </div>
+         
          </section>
 
 
